--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -1,3 +1,7 @@
+{% load staticfiles %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'articles/style.css' %}" />
+
 {% if latest_article_list %}
     <ul>
     {% for article in latest_article_list %}
