--- a/articles/templates/articles/article.html
+++ b/articles/templates/articles/article.html
@@ -2,12 +2,10 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'articles/style.css' %}" />
 
-<h1>{{ article.title }}</h1>
-
-    <ul>
-
-        <li><a href="/articles/{{ article.id }}/">{{ article.author }}</a></li>
-        <img src="{{article.hero_image.url}}">
-        <img src="{{article.additional_image.url}}">
-
-    </ul>
+<div class="section">
+  <h1>{{ article.title }}</h1>
+    <li><a href="/articles/{{ article.id }}/">{{ article.author }}</a></li>
+    <p>{{ article.body }}</p>
+    <img src="{{article.hero_image.url}}">
+    <img src="{{article.additional_image.url}}">
+</div>
