--- a/articles/static/articles/style.css
+++ b/articles/static/articles/style.css
@@ -207,217 +207,36 @@ button, input[type="submit"] {
 html, body {
   height: 100%; }
 
-input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], input[type="color"], textarea {
-  border: 1px solid #dce0e0;
-  border-radius: 2px;
-  background-color: #fff;
-  color: #565a5c;
-  box-shadow: none;
-  padding-top: 20px;
-  padding-bottom: 20px; }
-  input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="week"]:focus, input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="time"]:focus, input[type="url"]:focus, input[type="color"]:focus, textarea:focus {
-    box-shadow: none; }
+.section {
+  max-width: 68em;
+  margin-left: auto;
+  margin-right: auto; }
+  .section:after {
+    content: "";
+    display: table;
+    clear: both; }
 
-.button {
-  color: white;
-  display: inline-block;
-  margin-bottom: 0;
-  border-radius: 20px;
-  border: 1px solid;
-  text-align: center;
-  vertical-align: middle;
-  line-height: 1.5;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  white-space: nowrap;
-  cursor: pointer;
-  text-transform: capitalize;
-  font-size: 16px;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  letter-spacing: 1px;
-  padding: 10px 20px; }
-  .button:hover, .button:focus {
-    color: white; }
-  .button a {
-    color: white !important; }
+.article-main {
+  float: left;
+  display: block;
+  margin-right: 2.3576515979%;
+  width: 74.4105871005%;
+  margin-right: 0; }
+  .article-main:last-child {
+    margin-right: 0; }
 
-button {
-  color: white;
-  display: inline-block;
-  margin-bottom: 0;
-  border-radius: 20px;
-  border: 1px solid;
-  text-align: center;
-  vertical-align: middle;
-  line-height: 1.5;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  white-space: nowrap;
-  cursor: pointer;
-  text-transform: capitalize;
-  font-size: 16px;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  letter-spacing: 1px;
-  padding: 10px 20px; }
-  button:hover, button:focus {
-    color: white; }
-  button a {
-    color: white !important; }
-
-body {
-  background: #fafafa;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  color: #565a5c; }
-
-h1, h2, h3, h4, h5 {
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif; }
-
-p, li, a {
-  font-size: 18px; }
-
-p.bold {
-  font-weight: 900; }
-
-nav.transparent {
-  background: transparent; }
-
-nav {
-  background: #e2492f;
-  z-index: 99;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  width: 100%;
-  position: relative; }
-  nav .brand {
-    float: left;
-    width: 200px; }
-  nav a.primary {
-    color: white;
-    display: inline-block;
-    margin-bottom: 0;
-    border-radius: 20px;
-    border: 1px solid;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 1.5;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    white-space: nowrap;
-    cursor: pointer;
-    text-transform: capitalize;
-    font-size: 16px;
-    font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-    letter-spacing: 1px;
-    padding: 10px 20px;
-    border-color: white;
-    font-weight: 400; }
-    nav a.primary:hover, nav a.primary:focus {
-      color: white; }
-  nav ul.navigation {
-    list-style-type: none;
-    margin-left: 0;
-    float: right;
-    margin-bottom: 0;
-    line-height: 50px; }
-    nav ul.navigation li {
-      display: inline-block;
-      margin-right: 20px; }
-      nav ul.navigation li:last-child {
-        margin-right: 0; }
-      nav ul.navigation li a {
-        color: white;
-        font-size: 16px; }
-
-.device-background {
-  background: url('/images/1.png'), -webkit-linear-gradient(-280deg, #0A120D, #162C4C), no-repeat #162C4C scroll;
-  background: url('/images/1.png'), linear-gradient(10deg, #0A120D, #162C4C), no-repeat #162C4C scroll;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: center;
-  height: 40em; }
-  .device-background button {
-    color: white;
-    display: inline-block;
-    margin-bottom: 0;
-    border-radius: 20px;
-    border: 1px solid;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 1.5;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    white-space: nowrap;
-    cursor: pointer;
-    text-transform: capitalize;
-    font-size: 16px;
-    font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-    letter-spacing: 1px;
-    padding: 10px 20px;
-    font-size: 1em;
-    outline: none; }
-    .device-background button:hover, .device-background button:focus {
-      color: white; }
-
-.device-text {
-  color: white;
-  padding: 2em; }
-  @media screen and (min-width: 53.75em) {
-    .device-text {
-      max-width: 50%;
-      padding: 5em 3em 4em 1em;
-      float: left; } }
-  .device-text h4 {
-    margin-bottom: 0.5em;
-    padding-bottom: 0.5em;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-    color: white; }
-  .device-text p {
-    margin-bottom: 1.5em; }
-
-.device {
-  display: none;
-  position: relative; }
-  @media screen and (min-width: 53.75em) {
-    .device {
-      -webkit-transform: perspective(800px) translateX(0px) translateY(-100px) translateZ(50px) rotateX(0deg) rotateY(-20deg) rotateZ(0deg);
-      -moz-transform: perspective(800px) translateX(0px) translateY(-100px) translateZ(50px) rotateX(0deg) rotateY(-20deg) rotateZ(0deg);
-      -ms-transform: perspective(800px) translateX(0px) translateY(-100px) translateZ(50px) rotateX(0deg) rotateY(-20deg) rotateZ(0deg);
-      -o-transform: perspective(800px) translateX(0px) translateY(-100px) translateZ(50px) rotateX(0deg) rotateY(-20deg) rotateZ(0deg);
-      transform: perspective(800px) translateX(0px) translateY(-100px) translateZ(50px) rotateX(0deg) rotateY(-20deg) rotateZ(0deg);
-      display: block;
-      float: right;
-      margin-bottom: -12em;
-      margin-top: 9.1em;
-      margin-right: 2em;
-      padding: 5em 0;
-      width: 14.8em;
-      border-radius: 2em;
-      background: #1a1a1a;
-      box-shadow: 1px 0px #343434, 4px 0px #060606, 7px 0px black, 10px 0px black, 13px 0px black;
-      z-index: 99999; }
-      .device .screen {
-        width: 14em;
-        height: 25em;
-        background-image: url('/images/mockups3.jpg');
-        background-size: cover;
-        box-shadow: inset 0 1px 8px rgba(0, 0, 0, 0.5);
-        margin: auto;
-        border-radius: 0.2em; } }
+.side-nav {
+  float: left;
+  display: block;
+  margin-right: 2.3576515979%;
+  width: 23.2317613015%; }
+  .side-nav:last-child {
+    margin-right: 0; }
 
 .footer {
-  background: #12164E;
+  background: #2f5860;
   padding: 3em 1.618em;
-  width: 100%;
-  bottom: 0;
-  position: absolute; }
+  width: 100%; }
   .footer .footer-logo {
     text-align: center;
     margin-bottom: 2em; }
@@ -476,61 +295,10 @@ nav {
     max-width: 35em;
     text-align: center; }
 
-footer {
-  background: #1B215F;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  text-align: center;
-  bottom: 0;
-  width: 100%; }
-  footer ul.footer-links {
-    color: white;
-    margin-left: 0; }
-    footer ul.footer-links li {
-      display: inline-block;
-      margin-right: 15px;
-      font-size: 16px; }
-    footer ul.footer-links a {
-      color: inherit;
-      font-size: 16px; }
-  footer .toronto-love {
-    color: white; }
-
-footer.new {
-  background: #1B215F;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-  width: 100%; }
-  footer.new ul.footer-links {
-    color: white;
-    margin-left: 0; }
-    footer.new ul.footer-links li {
-      display: inline-block;
-      margin-right: 15px;
-      font-size: 16px; }
-    footer.new ul.footer-links a {
-      color: inherit;
-      font-size: 16px; }
-  footer.new .toronto-love {
-    color: white; }
-
-.brand img {
-  margin-top: 5px; }
-
-.container {
-  height: 100%;
-  position: relative; }
-
-#paragraph {
-  margin-top: 5em;
-  margin-bottom: 5em; }
-
 .centered-navigation {
-  background-color: #e2492f;
-  border-bottom: 1px solid #d5381e;
+  background-color: #E7F1EC;
+  border-bottom: 1px solid #d4e6dd;
+  font-family: Georgia, Cambria, "Times New Roman", Times, serif;
   height: 60px;
   width: 100%;
   z-index: 9999; }
@@ -541,9 +309,8 @@ footer.new {
     padding-left: 1em; }
     .centered-navigation .mobile-logo img {
       max-height: 60px;
-      opacity: 1;
-      padding: 0.8em 0;
-      margin-top: 0.17em; }
+      opacity: 0.6;
+      padding: 0.8em 0; }
     @media screen and (min-width: 53.75em) {
       .centered-navigation .mobile-logo {
         display: none; } }
@@ -586,9 +353,13 @@ footer.new {
     z-index: 99999; }
     @media screen and (min-width: 53.75em) {
       .centered-navigation ul.centered-navigation-menu {
-        display: block; } }
+        display: block;
+        text-align: center; } }
+  @media screen and (min-width: 53.75em) {
+    .centered-navigation .nav-link:first-child {
+      margin-left: 2.2em; } }
   .centered-navigation ul li.nav-link {
-    background: #e2492f;
+    background: #E7F1EC;
     display: block;
     line-height: 60px;
     overflow: hidden;
@@ -615,9 +386,9 @@ footer.new {
       .centered-navigation li.logo.nav-link {
         display: inline; } }
   .centered-navigation .logo img {
-    margin-bottom: -0.15em;
+    margin-bottom: -0.6666666667em;
     max-height: 2em;
-    opacity: 1; }
+    opacity: 0.6; }
   .centered-navigation li.more.nav-link {
     padding-right: 0; }
     @media screen and (min-width: 53.75em) {
@@ -685,184 +456,13 @@ footer.new {
             border-bottom-right-radius: 3px;
             padding-bottom: 0.7em; } }
       .centered-navigation ul.submenu li a {
-        background-color: #e03d22;
+        background-color: #ddebe4;
         display: inline-block;
         text-align: right;
         width: 100%; }
         @media screen and (min-width: 53.75em) {
           .centered-navigation ul.submenu li a {
-            background-color: #e2492f;
+            background-color: #E7F1EC;
             padding-left: 1em;
             text-align: left;
             width: 12em; } }
-
-.fa-bars {
-  margin-top: 1.4rem; }
-
-.cards:after {
-  content: "";
-  display: table;
-  clear: both; }
-
-.card {
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  background-color: #f7f7f7;
-  border-radius: 3px;
-  border: 1px solid #DDD;
-  margin-bottom: 1.5em;
-  cursor: pointer;
-  box-shadow: 0 2px 4px #e6e6e6;
-  position: relative; }
-  @media screen and (min-width: 53.75em) {
-    .card {
-      float: left;
-      display: block;
-      margin-right: 2.3576515979%;
-      width: 31.7615656014%; }
-      .card:last-child {
-        margin-right: 0; }
-      .card:nth-child(3n) {
-        margin-right: 0; }
-      .card:nth-child(3n+1) {
-        clear: left; } }
-  .card .card-image {
-    overflow: hidden;
-    max-height: 200px; }
-    .card .card-image img {
-      width: 100%;
-      -webkit-transition: all 0.2s ease-in-out;
-      -moz-transition: all 0.2s ease-in-out;
-      transition: all 0.2s ease-in-out;
-      background: #DBD199;
-      border-top-left-radius: 3px;
-      border-top-right-radius: 3px; }
-  .card .ribbon-wrapper {
-    width: 85px;
-    height: 85px;
-    overflow: hidden;
-    position: absolute;
-    top: -1px;
-    right: -1px; }
-    .card .ribbon-wrapper .ribbon {
-      font-size: 0.8em;
-      font-weight: 800;
-      text-align: center;
-      -webkit-transform: rotate(45deg);
-      -moz-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-      -o-transform: rotate(45deg);
-      transform: rotate(45deg);
-      position: relative;
-      padding: 2px 7px;
-      left: -5px;
-      top: 15px;
-      width: 120px;
-      background-color: #2CB0C9;
-      color: white;
-      box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3); }
-  .card .card-header {
-    -webkit-transition: all 0.2s ease-in-out;
-    -moz-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #DDD;
-    border-radius: 3px 3px 0 0;
-    font-weight: bold;
-    padding: 0.5em 0.809em; }
-  .card .card-copy {
-    padding: 0.75em 0.809em;
-    font-size: 0.9em;
-    line-height: 1.5em; }
-  .card .card-stats {
-    padding: 0.75em 0.809em;
-    overflow: auto; }
-    .card .card-stats ul li {
-      display: inline;
-      color: #4fc3d9;
-      font-weight: 800;
-      font-size: 1.2em;
-      float: left;
-      border-right: 1px solid rgba(51, 51, 51, 0.2);
-      line-height: 1.1em;
-      padding: 0 0.7em 0 0.7em; }
-      .card .card-stats ul li:first-child {
-        padding-left: 0; }
-      .card .card-stats ul li:last-child {
-        border-right: 0; }
-      .card .card-stats ul li span {
-        color: #333;
-        font-size: 0.7em;
-        display: block;
-        font-weight: normal; }
-  .card:hover {
-    background-color: white; }
-    .card:hover .card-image img {
-      background: #e2daac; }
-    .card:hover .card-header {
-      background-color: white; }
-  .card:active {
-    background-color: #f7f7f7; }
-    .card:active .card-header {
-      background-color: #f7f7f7; }
-
-#map-canvas {
-  height: 60%;
-  margin: 0px;
-  padding: 0px; }
-
-.progress-bar-indication {
-  background-color: #f2f2f2;
-  border: 1px solid #DDD;
-  box-shadow: inset 0 0 3px 0 rgba(115, 115, 115, 0.15);
-  border-radius: 3px;
-  margin: 0 auto;
-  width: 50%; }
-  .progress-bar-indication > span.meter {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    background-color: #2CB0C9;
-    background-size: 40px 40px;
-    background-repeat: repeat-x;
-    border: 1px solid #1e798a;
-    border-radius: 2px;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    display: block;
-    height: 100%;
-    width: 60%; }
-  .progress-bar-indication p {
-    margin-bottom: 0;
-    padding: 0.1em 0.5em;
-    font-weight: 800;
-    color: white;
-    text-shadow: 0 0 1px black; }
-
-#active {
-  border-bottom: 2px solid #2CB0C9; }
-
-.row {
-  max-width: 68em;
-  margin-left: auto;
-  margin-right: auto; }
-  .row:after {
-    content: "";
-    display: table;
-    clear: both; }
-
-#right {
-  float: right;
-  padding-right: 0 !important;
-  padding-left: 1em !important;
-  color: white !important; }
-
-.section {
-  max-width: 68em;
-  margin-left: auto;
-  margin-right: auto; }
-  .section:after {
-    content: "";
-    display: table;
-    clear: both; }
