--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,24 +3,6 @@
 @import "neat";
 @import "base/base";
 
-$device-padding-vertical: 5em;
-$device-padding-horizontal: .4em;
-$device-screen-width: 14em;
-$device-screen-height: 25em;
-$device-background: darken(gray, 40);
-$device-backside-background: darken($device-background, 10);
-$device-text-color: white;
-
-$device-background-top: #162C4C;
-$device-background-bottom: #0A120D;
-$gradient-angle: 10deg;
-$device-image: '/images/1.png';
-$device-screen-image: '/images/mockups3.jpg';
-
-$gold: #d7c0a8;
-$grey: #edefed;
-$orange: rgb(226,73,47);
-$blue: #1B215F;
 
 * {
   margin: 0;
@@ -30,194 +12,17 @@ html, body {
   height:100%;
 }
 
-input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], input[type="color"], textarea {
-  border: 1px solid #dce0e0;
-  border-radius: 2px;
-  background-color: #fff;
-  color: #565a5c;
-  box-shadow: none;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  &:focus {
-    box-shadow: none;
-  }
+.section {
+  @include outer-container;
 }
 
-@mixin button($background, $color) {
-
-  color: $color;
-  display: inline-block;
-  margin-bottom: 0;
-  border-radius: 20px;
-  border: 1px solid;
-
-  text-align: center;
-  vertical-align: middle;
-  line-height: 1.5;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  white-space: nowrap;
-  cursor: pointer;
-  text-transform: capitalize;
-  font-size: 16px;
-  font-family: $helvetica;
-  letter-spacing: 1px;
-  padding: 10px 20px;
-  &:hover, &:focus {
-
-    color: $color;
-  }
+.article-main {
+  @include span-columns(9);
+  @include omega();
 }
 
-.button {
-  @include button($orange,white);
-  a {
-    color:white !important;
-  }
-}
-
-button {
-  @include button($blue,white);
-  a {
-    color:white !important;
-  }
-}
-
-body {
-  background: #fafafa;
-  font-family: $helvetica;
-  color: #565a5c;
-}
-
-h1, h2, h3, h4, h5 {
-  font-family: $helvetica;
-}
-
-p, li, a {
-  font-size: 18px;
-}
-
-p.bold {
-  font-weight: 900;
-}
-
-nav.transparent {
-  background: transparent;
-}
-
-nav {
-  background: rgba($orange,1);
-  z-index: 99;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  width: 100%;
-  position: relative;
-  .brand {
-    float: left;
-    width: 200px;
-  }
-  a.primary {
-    @include button($orange, white);
-    border-color: white;
-    font-weight: 400;
-  }
-  ul.navigation {
-    list-style-type: none;
-    margin-left: 0;
-    float: right;
-    margin-bottom: 0;
-    line-height: 50px;
-    li {
-      display: inline-block;
-      margin-right: 20px;
-      &:last-child {
-        margin-right: 0;
-      }
-      a {
-        color: white;
-        font-size: 16px;
-      }
-    }
-  }
-}
-
-.device-background {
-  @include background(url($device-image), linear-gradient($gradient-angle, $device-background-bottom, $device-background-top), no-repeat $device-background-top scroll);
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: center;
-  height: 40em;
-
-  button {
-    @include button(simple, $base-background-color);
-    font-size: $base-font-size;
-    outline: none;
-  }
-}
-
-.device-text {
-  color: $device-text-color;
-  padding: 2em;
-
-  @include media($large-screen) {
-    max-width: 50%;
-    padding: 5em 3em 4em 1em;
-    float: left;
-  }
-
-  h4 {
-    margin-bottom: .5em;
-    padding-bottom: .5em;
-    border-bottom: 1px solid transparentize($device-text-color, .7);
-    color:white;
-  }
-
-  p {
-    margin-bottom: 1.5em;
-  }
-}
-
-.device {
-  display: none;
-  position: relative;
-
-  @include media($large-screen) {
-    @include transform(
-      perspective(800px)
-      translateX(0px)
-      translateY(-100px)
-      translateZ(50px)
-      rotateX(0deg)
-      rotateY(-20deg)
-      rotateZ(-0deg));
-    display: block;
-    float: right;
-    margin-bottom: -12em;
-    margin-top: 9.1em;
-    margin-right:2em;
-    padding: $device-padding-vertical 0;
-    width: $device-screen-width + (2 * $device-padding-horizontal);
-    border-radius: 2em;
-    background: $device-background;
-    box-shadow:
-      1px 0px lighten($device-backside-background, 20),
-      4px 0px lighten($device-backside-background, 2),
-      7px 0px $device-backside-background,
-      10px 0px $device-backside-background,
-      13px 0px $device-backside-background;
-      z-index: 99999;
-
-    .screen {
-      @include size($device-screen-width $device-screen-height);
-      background-image: url($device-screen-image);
-      background-size: cover;
-      box-shadow: inset 0 1px 8px transparentize(black, .5);
-      margin: auto;
-      border-radius: .2em;
-    }
-  }
+.side-nav {
+  @include span-columns(3);
 }
 
 .footer {
@@ -226,11 +31,9 @@ nav {
   $footer-link-color: transparentize($footer-color, .6);
   $footer-disclaimer-color: transparentize($footer-color, .6);
 
-  background: #12164E;
+  background: $footer-background;
   padding: $base-spacing*2 $gutter;
   width: 100%;
-  bottom: 0;
-  position: absolute;
 
   .footer-logo {
     text-align: center;
@@ -299,80 +102,10 @@ nav {
   }
 }
 
-
-footer {
-  background: $blue;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  text-align: center;
-
-  bottom: 0;
-  width: 100%;
-  ul.footer-links {
-    color: white;
-    margin-left: 0;
-    li {
-      display: inline-block;
-      margin-right: 15px;
-      font-size: 16px;
-    }
-    a {
-      color: inherit;
-      font-size: 16px;
-    }
-  }
-  .toronto-love {
-    color: white;
-  }
-}
-
-
-footer.new {
-  background: $blue;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  text-align: center;
-  position:absolute;
-  bottom: 0;
-  width: 100%;
-  ul.footer-links {
-    color: white;
-    margin-left: 0;
-    li {
-      display: inline-block;
-      margin-right: 15px;
-      font-size: 16px;
-    }
-    a {
-      color: inherit;
-      font-size: 16px;
-    }
-  }
-  .toronto-love {
-    color: white;
-  }
-}
-
-.brand {
-  img {
-    margin-top:5px;
-  }
-}
-
-.container {
-  height:100%;
-  position:relative;
-}
-
-#paragraph {
-  margin-top:5em;
-  margin-bottom:5em;
-}
-
 .centered-navigation {
   $centered-navigation-padding: 1em;
   $centered-navigation-logo-height: 2em;
-  $centered-navigation-background: $orange;
+  $centered-navigation-background: #E7F1EC;
   $centered-navigation-color: transparentize($base-font-color, 0.3);
   $centered-navigation-color-hover: $base-font-color;
   $centered-navigation-height: 60px;
@@ -384,6 +117,7 @@ footer.new {
 
   background-color: $centered-navigation-background;
   border-bottom: 1px solid darken($centered-navigation-background, 6);
+  font-family: $serif;
   height: $centered-navigation-height;
   width: 100%;
   z-index: 9999;
@@ -399,9 +133,8 @@ footer.new {
 
     img {
       max-height: $centered-navigation-height;
-      opacity: 1;
+      opacity: .6;
       padding: .8em 0;
-      margin-top: 0.17em;
     }
 
     @include media($horizontal-bar-mode) {
@@ -451,11 +184,18 @@ footer.new {
 
     @include media ($horizontal-bar-mode) {
       display: block;
+      text-align: center;
     }
   }
 
 
 // The nav items
+
+  .nav-link:first-child {
+    @include media($horizontal-bar-mode) {
+      margin-left: $centered-navigation-item-nudge;
+    }
+  }
 
   ul li.nav-link {
     background: $centered-navigation-background;
@@ -498,9 +238,9 @@ footer.new {
   }
 
   .logo img {
-    margin-bottom: -0.15em;
+    margin-bottom: -$centered-navigation-logo-height / 3;
     max-height: $centered-navigation-logo-height;
-    opacity: 1;
+    opacity: .6;
   }
 
 
@@ -617,207 +357,4 @@ footer.new {
       }
     }
   }
-}
-
-.fa-bars {
-  margin-top:1.4rem;
-}
-
-.cards {
-  @include clearfix;
-}
-
-.card {
-  $card-border-color: $base-border-color;
-  $card-border: 1px solid $card-border-color;
-  $card-background: lighten($card-border-color, 10);
-  $card-header-background: $card-background;
-  $card-hover-background: lighten($card-background, 5);
-  $card-image-background: #DBD199;
-  $card-image-hover-background: lighten($card-image-background, 5);
-  $card-stats-color: lighten($base-accent-color, 10);
-
-  @include transition (all 0.2s ease-in-out);
-  background-color: $card-background;
-  border-radius: $base-border-radius;
-  border: $card-border;
-  margin-bottom: $base-spacing;
-  cursor: pointer;
-  box-shadow: 0 2px 4px darken($base-background-color, 10);
-  position: relative;
-
-  @include media($large-screen) {
-    @include span-columns(4);
-    @include omega(3n);
-  }
-
-  .card-image {
-    overflow: hidden;
-    max-height: 200px;
-
-    img {
-      width: 100%;
-      @include transition (all 0.2s ease-in-out);
-      background: $card-image-background;
-      border-top-left-radius: $base-border-radius;
-      border-top-right-radius: $base-border-radius;
-    }
-  }
-
-  .ribbon-wrapper {
-    $ribbon-size: 85px;
-    $ribbon-background: $base-accent-color;
-    @include size($ribbon-size);
-    overflow: hidden;
-    position: absolute;
-    top: -1px;
-    right: -1px;
-
-    .ribbon {
-      font-size: .8em;
-      font-weight: 800;
-      text-align: center;
-      @include transform(rotate(45deg));
-      position: relative;
-      padding: 2px 7px;
-      left: -5px;
-      top: 15px;
-      width: 120px;
-      background-color: $ribbon-background;
-      color: white;
-      box-shadow: 0px 0px 3px rgba(0,0,0,0.3);
-    }
-  }
-
-  .card-header {
-    @include transition (all 0.2s ease-in-out);
-    background-color: $card-header-background;
-    border-bottom: $card-border;
-    border-radius: $base-border-radius $base-border-radius 0 0;
-    font-weight: bold;
-    padding: $base-spacing/3 $gutter/2;
-  }
-
-  .card-copy {
-    padding: $base-spacing/2 $gutter/2;
-    font-size: .9em;
-    line-height: 1.5em;
-  }
-
-  .card-stats {
-    padding: $base-spacing/2 $gutter/2;
-    overflow: auto;
-
-    ul li {
-      display: inline;
-      color: $card-stats-color;
-      font-weight: 800;
-      font-size: 1.2em;
-      float: left;
-      border-right: 1px solid transparentize($base-font-color, .8);
-      line-height: 1.1em;
-      padding: 0 .7em 0 .7em;
-
-      &:first-child {
-        padding-left: 0;
-      }
-
-      &:last-child {
-        border-right: 0;
-      }
-
-      span {
-        color: $base-font-color;
-        font-size: .7em;
-        display: block;
-        font-weight: normal;
-      }
-    }
-  }
-
-  &:hover {
-    background-color: $card-hover-background;
-
-    .card-image img {
-      background: $card-image-hover-background;
-    }
-
-    .card-header {
-      background-color: $card-hover-background;
-    }
-  }
-
-  &:active {
-    background-color: $card-background;
-
-    .card-header {
-      background-color: $card-background;
-    }
-  }
-}
-
-#map-canvas {
-  height: 60%;
-  margin: 0px;
-  padding: 0px
-}
-
-.progress-bar-indication {
-  $progress-border-color: $base-border-color;
-  $progress-border: 1px solid $progress-border-color;
-  $progress-meter-border-color: $base-accent-color;
-  $progress-meter-border: 1px solid darken($progress-meter-border-color, 15%);
-  $progress-meter-color: $progress-meter-border-color;
-  $progress-background: darken($base-background-color, 5);
-  $progress-animation-duration: 0.7s;
-  $progress-color: white;
-
-  background-color: $progress-background;
-  border: $progress-border;
-  box-shadow: inset 0 0 3px 0 rgba(darken($progress-background, 50%), 0.15);
-  border-radius: $base-border-radius;
-  margin: 0 auto;
-  width: 50%;
-
-  > span.meter {
-    @include box-sizing(border-box);
-    background-color: $progress-meter-color;
-    background-size: 40px 40px;
-    background-repeat: repeat-x;
-    border: $progress-meter-border;
-    border-radius: $base-border-radius /1.5;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    display: block;
-    height: 100%;
-    width: 60%;
-  }
-
-  p {
-    margin-bottom: 0;
-    padding: .1em .5em;
-    font-weight: 800;
-    color: $progress-color;
-    text-shadow: 0 0 1px black;
-  }
-}
-
-#active {
-  border-bottom: 2px solid #2CB0C9;
-}
-
-.row {
-  @include outer-container;
-}
-
-#right {
-  float:right;
-  padding-right: 0 !important;
-  padding-left: 1em !important;
-  color:white !important;
-}
-
-
-.section {
-  @include outer-container;
 }
