--- a/articles/static/articles/style.css
+++ b/articles/static/articles/style.css
@@ -229,7 +229,9 @@ html, body {
   float: left;
   display: block;
   margin-right: 2.3576515979%;
-  width: 23.2317613015%; }
+  width: 23.2317613015%;
+  border: 1px solid black;
+  padding: 1em 1em 1em 1em; }
   .side-nav:last-child {
     margin-right: 0; }
 
@@ -299,17 +301,17 @@ html, body {
   background-color: #E7F1EC;
   border-bottom: 1px solid #d4e6dd;
   font-family: Georgia, Cambria, "Times New Roman", Times, serif;
-  height: 60px;
+  height: 100px;
   width: 100%;
   z-index: 9999; }
   .centered-navigation .mobile-logo {
     display: inline;
     float: left;
-    max-height: 60px;
+    max-height: 100px;
     padding-left: 1em; }
     .centered-navigation .mobile-logo img {
-      max-height: 60px;
-      opacity: 0.6;
+      max-height: 100px;
+      opacity: 1;
       padding: 0.8em 0; }
     @media screen and (min-width: 53.75em) {
       .centered-navigation .mobile-logo {
@@ -319,7 +321,7 @@ html, body {
     display: block;
     float: right;
     font-weight: 700;
-    line-height: 60px;
+    line-height: 100px;
     margin: 0;
     padding-right: 1em;
     text-transform: uppercase; }
@@ -361,7 +363,7 @@ html, body {
   .centered-navigation ul li.nav-link {
     background: #E7F1EC;
     display: block;
-    line-height: 60px;
+    line-height: 100px;
     overflow: hidden;
     padding-right: 1em;
     text-align: right;
@@ -371,7 +373,7 @@ html, body {
       .centered-navigation ul li.nav-link {
         background: transparent;
         display: inline;
-        line-height: 60px; }
+        line-height: 100px; }
         .centered-navigation ul li.nav-link a {
           padding-right: 1em; } }
     .centered-navigation ul li.nav-link a {
@@ -386,9 +388,9 @@ html, body {
       .centered-navigation li.logo.nav-link {
         display: inline; } }
   .centered-navigation .logo img {
-    margin-bottom: -0.6666666667em;
-    max-height: 2em;
-    opacity: 0.6; }
+    margin-bottom: -5.3em;
+    max-height: 5em;
+    opacity: 1; }
   .centered-navigation li.more.nav-link {
     padding-right: 0; }
     @media screen and (min-width: 53.75em) {
@@ -447,7 +449,7 @@ html, body {
       padding-right: 0; }
       @media screen and (min-width: 53.75em) {
         .centered-navigation ul.submenu li {
-          line-height: 46.1538461538px; }
+          line-height: 76.9230769231px; }
           .centered-navigation ul.submenu li:first-child > a {
             border-top-left-radius: 3px;
             border-top-right-radius: 3px; }
