--- a/articles/templates/articles/_header.html
+++ b/articles/templates/articles/_header.html
@@ -5,13 +5,13 @@
 <header class="centered-navigation">
   <div class="centered-navigation-wrapper">
     <a href="javascript:void(0)" class="mobile-logo">
-      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3_dark.png" alt="Logo image">
+      <img src="media/logos/2.png" alt="Logo image">
     </a>
     <a href="" class="centered-navigation-menu-button">MENU</a>
     <ul class="centered-navigation-menu">
       <li class="nav-link logo">
         <a href="javascript:void(0)" class="logo">
-          <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3_dark.png" alt="Logo image">
+          <img src="media/logos/2.png" alt="Logo image">
         </a>
       </li>
     </ul>
