--- a/articles/templates/articles/_header.html
+++ b/articles/templates/articles/_header.html
@@ -1,17 +1,20 @@
 {% load staticfiles %}
 
+<head>
 <link rel="stylesheet" type="text/css" href="{% static 'articles/style.css' %}" />
-
+<script src="//use.typekit.net/oei2nrj.js"></script>
+<script>try{Typekit.load();}catch(e){}</script>
+</head>
 <header class="centered-navigation">
   <div class="centered-navigation-wrapper">
     <a href="javascript:void(0)" class="mobile-logo">
-      <img src="media/logos/2.png" alt="Logo image">
+      <img src="{% static 'articles/2.png' %}" alt="Logo image">
     </a>
     <a href="" class="centered-navigation-menu-button">MENU</a>
     <ul class="centered-navigation-menu">
       <li class="nav-link logo">
         <a href="javascript:void(0)" class="logo">
-          <img src="media/logos/2.png" alt="Logo image">
+          <img src="{% static 'articles/2.png' %}" alt="Logo image">
         </a>
       </li>
     </ul>
