--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -11,13 +11,27 @@
 
   <div class="article-main">
   {% if latest_article_list %}
-
-      {% for article in latest_article_list %}
-          <h1><a href="/articles/{{ article.id }}/">{{ article.title }}</a></h1>
-          <p>{{ article.body }}</p>
-      {% endfor %}
+    {% for article in latest_article_list %}
+      {% if forloop.first %}
+        <h1><a href="/articles/{{ article.id }}/">{{ article.title }}</a></h1>
+        {{ article.pub_date }}  |  <a href="/articles/{{ article.id }}/">{{ article.author }}</a>
+        <img src="{{article.hero_image.url}}">
+        <p>{{ article.body|truncatechars:700 }}</p>
+      {% else %}
+      <div class="articles-list">
+        <h1><a href="/articles/{{ article.id }}/">{{ article.title }}</a></h1>
+        <p>{{ article.body|truncatechars:500 }}</p>
+        <p><a href="/articles/{{ article.id }}/">Read more...</a></p>
+      </div>
+      {% endif %}
+    {% endfor %}
+      <div class="numbers">
+        <div class="numberCircle">1</div>
+        <div class="numberCircle">2</div>
+        <div class="numberCircle">3</div>
+      </div>
   {% else %}
-      <p>No articles are available.</p>
+      <p>No articles are available!</p>
   {% endif %}
   </div>
 </div>
