--- a/sass/bourbon/addons/_font-family.scss
+++ b/sass/bourbon/addons/_font-family.scss
@@ -3,3 +3,4 @@ $helvetica: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 $lucida-grande: "Lucida Grande", Tahoma, Verdana, Arial, sans-serif;
 $monospace: "Bitstream Vera Sans Mono", Consolas, Courier, monospace;
 $verdana: Verdana, Geneva, sans-serif;
+$source-sans: "source-sans-pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
