What to read next added

--- a/articles/templates/articles/_side_nav.html
+++ b/articles/templates/articles/_side_nav.html
@@ -1,7 +1,12 @@
 <div class="side-nav">
   <ul>
-    <li><img src="{{article.hero_image.url}}"></li>
-    <li><img src="{{article.hero_image.url}}"></li>
-    <li><img src="{{article.hero_image.url}}"></li>
+    <div class="hamburger-search">
+      <a href="#"><i class="fa fa-reorder"></i></a> | <a href="#"><i class="fa fa-search" ></i></a>
+    </div>
+    <div class="nav-item"><li><a href="#"><i class="fa fa-edit"></i></a></li>New Post</div>
+    <div class="nav-item"><li><a href="#"><i class="fa fa-inbox"></i></a></li>Posts</div>
+    <div class="nav-item"><li><a href="#"><i class="fa fa-folder-open"></i></a></li>Drafts</div>
+    <div class="nav-item"><li><a href="#"><i class="fa fa-cog"></i></a></li>Settings</div>
+    <div class="nav-item"><li><a href="#"><i class="fa fa-sign-out"></i></a></li>Sign Out</div>
   </ul>
 </div>
