--- a/articles/static/articles/style.css
+++ b/articles/static/articles/style.css
@@ -220,7 +220,7 @@ html, body {
   float: left;
   display: block;
   margin-right: 2.3576515979%;
-  width: 74.4105871005%;
+  width: 87.2052935503%;
   margin-right: 0;
   margin-top: 2em; }
   .article-main:last-child {
@@ -230,16 +230,82 @@ html, body {
   .article-main p {
     margin-top: 1em; }
 
+.article-page {
+  float: left;
+  display: block;
+  margin-right: 2.3576515979%;
+  width: 87.2052935503%;
+  margin-right: 0;
+  margin-top: 2em; }
+  .article-page:last-child {
+    margin-right: 0; }
+  .article-page img {
+    margin-top: 1em; }
+  .article-page p {
+    margin-top: 1em;
+    width: 65%;
+    float: left;
+    padding-right: 2em; }
+
+.article-image {
+  width: 35%;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+  height: 400px; }
+
+img.secondary-image {
+  position: absolute; }
+
+.read-next-image {
+  width: 23%;
+  margin-top: 0;
+  margin-bottom: 3em;
+  overflow: hidden;
+  position: relative;
+  height: 213px;
+  float: left;
+  margin-right: 0.5em;
+  margin-left: 0.6em; }
+
+img.read-next-absolute {
+  position: absolute;
+  max-width: 157%;
+  right: -3em; }
+
+.featured-article {
+  width: 100%;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+  height: 443px; }
+
+img.absolute {
+  position: absolute; }
+
 .side-nav {
   float: left;
   display: block;
   margin-right: 2.3576515979%;
-  width: 23.2317613015%;
-  border: 1px solid black;
-  padding: 1em 1em 1em 1em;
-  margin-top: 2em; }
+  width: 10.4370548518%;
+  border: 1px solid grey;
+  margin-top: 2em;
+  text-align: center; }
   .side-nav:last-child {
     margin-right: 0; }
+  .side-nav li {
+    font-size: 2em; }
+  .side-nav .nav-item {
+    margin-bottom: 1em;
+    margin-top: 1em; }
+  .side-nav .fa-reorder {
+    margin-right: 1em;
+    margin-top: 1em;
+    margin-bottom: 1em; }
+  .side-nav .fa-search {
+    margin-left: 1em; }
+  .side-nav .hamburger-search {
+    border-bottom: 1px solid grey; }
 
 .articles-list {
   width: 90%;
@@ -247,18 +313,22 @@ html, body {
   margin-bottom: 1em;
   margin-top: 1em; }
 
+.read-next {
+  border-bottom: 1px solid grey;
+  border-top: 1px solid grey; }
+
 .numberCircle {
   border-radius: 50%;
   width: 60px;
   height: 60px;
-  padding: 5px;
+  padding: 1px;
   background: #fff;
   border: 1px solid #666;
   color: #666;
   text-align: center;
   font-size: 32px;
-  margin-top: 3em;
-  margin-bottom: 6.4em; }
+  margin-top: 1.1em;
+  margin-bottom: 6.2em; }
 
 .footer {
   background: #2f5860;
