--- a/articles/templates/articles/_footer.html
+++ b/articles/templates/articles/_footer.html
@@ -24,5 +24,5 @@
 
   <hr>
 
-  <p>Disclaimer area lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, nostrum repudiandae saepe.</p>
+  <p>This exercise would not have been possible without <a href="http://seinfeldipsum.com/">Seinfeld Ipsum</a>.</p>
 </footer>
