--- a/articles/templates/articles/_header.html
+++ b/articles/templates/articles/_header.html
@@ -4,16 +4,17 @@
 <link rel="stylesheet" type="text/css" href="{% static 'articles/style.css' %}" />
 <script src="//use.typekit.net/oei2nrj.js"></script>
 <script>try{Typekit.load();}catch(e){}</script>
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <header class="centered-navigation">
   <div class="centered-navigation-wrapper">
-    <a href="javascript:void(0)" class="mobile-logo">
+    <a href="/articles" class="mobile-logo">
       <img src="{% static 'articles/2.png' %}" alt="Logo image">
     </a>
     <a href="" class="centered-navigation-menu-button">MENU</a>
     <ul class="centered-navigation-menu">
       <li class="nav-link logo">
-        <a href="javascript:void(0)" class="logo">
+        <a href="/articles" class="logo">
           <img src="{% static 'articles/2.png' %}" alt="Logo image">
         </a>
       </li>
