Added context processors

--- a/articles/templates/articles/article.html
+++ b/articles/templates/articles/article.html
@@ -12,7 +12,7 @@
     <div class="article-image"><img class="secondary-image" src="{{article.additional_image.url}}"></div>
   </div>
   <div class="article-main">
-    {% include 'articles/_read_next.html' %}
+    {% include 'articles/show_articles.html' %}
 
   </div>
 </div>
