--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -29,7 +29,7 @@
       <p>No articles are available!</p>
   {% endif %}
 
-  {% include 'articles/_read_next.html' %}
+  {% include 'articles/show_articles.html' %}
   </div>
 </div>
 
