--- a/articles/static/articles/style.css
+++ b/articles/static/articles/style.css
@@ -230,6 +230,21 @@ html, body {
   .article-main p {
     margin-top: 1em; }
 
+.Alessia-logo {
+  padding: 0.6em 0.5em 0.6em 0.5em; }
+
+.article-caption {
+  text-align: center;
+  font-size: 15px;
+  margin-bottom: 1em; }
+
+.read-next-container {
+  width: 24.7%;
+  display: inline-table; }
+
+.icons i:first-child {
+  margin-left: 0.5em; }
+
 .article-page {
   float: left;
   display: block;
@@ -247,6 +262,24 @@ html, body {
     float: left;
     padding-right: 2em; }
 
+.article-page-right {
+  float: left;
+  display: block;
+  margin-right: 2.3576515979%;
+  width: 87.2052935503%;
+  margin-right: 0;
+  margin-top: 2em;
+  float: right; }
+  .article-page-right:last-child {
+    margin-right: 0; }
+  .article-page-right img {
+    margin-top: 1em; }
+  .article-page-right p {
+    margin-top: 1em;
+    width: 65%;
+    float: left;
+    padding-right: 2em; }
+
 .article-image {
   width: 35%;
   margin: 0 auto;
@@ -258,15 +291,14 @@ img.secondary-image {
   position: absolute; }
 
 .read-next-image {
-  width: 23%;
+  width: 100%;
   margin-top: 0;
-  margin-bottom: 3em;
+  margin-bottom: 1em;
   overflow: hidden;
   position: relative;
   height: 213px;
   float: left;
-  margin-right: 0.5em;
-  margin-left: 0.6em; }
+  margin-right: 0.5em; }
 
 img.read-next-absolute {
   position: absolute;
@@ -315,7 +347,21 @@ img.absolute {
 
 .read-next {
   border-bottom: 1px solid grey;
-  border-top: 1px solid grey; }
+  border-top: 1px solid grey;
+  height: 50px; }
+  .read-next i {
+    float: right;
+    font-size: -webkit-xxx-large; }
+
+.header {
+  float: left;
+  width: 800px; }
+  .header h2 {
+    margin-top: 3px; }
+
+.icons {
+  float: right;
+  width: 100px; }
 
 .numberCircle {
   border-radius: 50%;
