Switched logos and added a little CSS animation in the footer

--- a/articles/templates/articles/_header.html
+++ b/articles/templates/articles/_header.html
@@ -9,13 +9,13 @@
 <header class="centered-navigation">
   <div class="centered-navigation-wrapper">
     <a href="/articles" class="mobile-logo">
-      <img src="{% static 'articles/2.png' %}" alt="Logo image">
+      <img src="{% static 'articles/wikisein.png' %}" alt="Logo image">
     </a>
     <a href="" class="centered-navigation-menu-button">MENU</a>
     <ul class="centered-navigation-menu">
       <li class="nav-link logo">
         <a href="/articles" class="logo">
-          <img src="{% static 'articles/2.png' %}" alt="Logo image">
+          <img src="{% static 'articles/wikisein.png' %}" alt="Logo image">
         </a>
       </li>
     </ul>
