--- a/articles/templates/articles/_footer.html
+++ b/articles/templates/articles/_footer.html
@@ -1,6 +1,7 @@
+{% load staticfiles %}
 <footer class="footer">
   <div class="footer-logo">
-    <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="Logo image">
+    <img class="wikisein" src="{% static 'articles/wikisein.png' %}" alt="Logo image">
   </div>
   <div class="footer-links">
     <ul>
