One last change, made text in side nav links

--- a/articles/templates/articles/_side_nav.html
+++ b/articles/templates/articles/_side_nav.html
@@ -7,10 +7,10 @@
     <div class="hamburger-search">
       <a href="#"><i class="fa fa-reorder"></i></a> | <a href="#"><i class="fa fa-search" ></i></a>
     </div>
-    <div class="nav-item"><li><a href="/articles"><i class="fa fa-home"></i></a></li>Home</div>
-    <div class="nav-item"><li><a href="#"><i class="fa fa-inbox"></i></a></li>Posts</div>
-    <div class="nav-item"><li><a href="#"><i class="fa fa-folder-open"></i></a></li>Drafts</div>
-    <div class="nav-item"><li><a href="#"><i class="fa fa-cog"></i></a></li>Settings</div>
-    <div class="nav-item"><li><a href="#"><i class="fa fa-sign-out"></i></a></li>Sign Out</div>
+    <div class="nav-item"><li><a href="/articles"><i class="fa fa-home"></i></a></li><a href="#">Home</a></div>
+    <div class="nav-item"><li><a href="#"><i class="fa fa-inbox"></i></a></li><a href="#">Posts</a></div>
+    <div class="nav-item"><li><a href="#"><i class="fa fa-folder-open"></i></a></li><a href="#">Drafts</a></div>
+    <div class="nav-item"><li><a href="#"><i class="fa fa-cog"></i></a></li><a href="#">Settings</a></div>
+    <div class="nav-item"><li><a href="#"><i class="fa fa-sign-out"></i></a></li><a href="#">Sign Out</a></div>
   </ul>
 </div>
